# resize_tool

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
